--- a/www/search.html
+++ b/www/search.html
@@ -9,12 +9,16 @@
 </ion-nav-bar>
 <ion-tabs class="tabs-striped tabs-top tabs-background-assertive tabs-color-light">
 
-  <ion-tab title="Personaje" icon="ion-ios-search" href="#/search/personaje">
+  <ion-tab title="Personaje" icon="ion-star" href="#/search/personaje">
     <ion-nav-view name="personaje-tab"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Comics" icon="ion-ios-book-outline" href="#/search/comics">
     <ion-nav-view name="comics-tab"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="Comics" icon="ion-ios-search" href="/">
+    <ion-nav-view name="home"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
