nuevo boton de busqueda

--- a/www/search.html
+++ b/www/search.html
@@ -17,8 +17,8 @@
     <ion-nav-view name="comics-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Comics" icon="ion-ios-search" href="/">
-    <ion-nav-view name="home"></ion-nav-view>
+  <ion-tab title="Home" icon="ion-ios-search" href="/">
+
   </ion-tab>
 
 </ion-tabs>
