--- a/www/personaje.html
+++ b/www/personaje.html
@@ -3,6 +3,7 @@
       <div class="container">
         <h2>Búsqueda</h2>
         <p>Estos son los resultados para: {{input.nombre}}</p>
+        <h3 class="hidden mensajeSinPersonaje">No se encontro el personaje que buscabas</h3>
         <div class="listaPersonajes">
           <div class="list card" ng-repeat="v in Personaje">
             <div class="item item-avatar">
