--- a/www/search.html
+++ b/www/search.html
@@ -2,8 +2,8 @@
   <h1 class="title">Resultados</h1>
 </ion-header-bar>
 <ion-nav-bar class="bar-assertive" ng-controller="BackCtrl">
-  <ion-nav-back-button class="button-clear"
-    ng-click="myGoBack()">
+  <ion-nav-back-button class="showMe button-clear"
+    ng-click="goHome()">
     <i class="ion-arrow-left-c"></i> Back
   </ion-nav-back-button>
 </ion-nav-bar>
@@ -15,10 +15,6 @@
 
   <ion-tab title="Comics" icon="ion-ios-book-outline" href="#/search/comics">
     <ion-nav-view name="comics-tab"></ion-nav-view>
-  </ion-tab>
-
-  <ion-tab title="Home" icon="ion-ios-search" href="/">
-
   </ion-tab>
 
 </ion-tabs>
